--- a/Tansilotren-Georgia/css/style.css
+++ b/Tansilotren-Georgia/css/style.css
@@ -161,7 +161,7 @@ div {
   width: 80px;
   height: 60px;
   z-index: 15;
-  background: url('../images/instruction.png') no-repeat center / contain;
+  background: url('../images/instruction.svg') no-repeat center / contain;
 }
 
 .instruction-en {
@@ -172,7 +172,7 @@ div {
 
 .instruction p {
   position: relative;
-  left: 10px;
+  left: 6px;
   top: 75px;
   font-size: 13px;
   color: #a00067;
