--- a/Vaksol/css/style.css
+++ b/Vaksol/css/style.css
@@ -175,6 +175,8 @@ h4 b {
   font-family: 'MB', sans-serif;
   line-height: 28px;
   margin-bottom: 35px;
+    position: relative;
+    z-index: 2;
 }
 
 .reasons-text {
