--- a/Vaksol/css/style.css
+++ b/Vaksol/css/style.css
@@ -7,6 +7,12 @@
 }
 
 @font-face {
+  font-family: 'MeB';
+  src: url('../fonts/Montserrat-ExtraBold.ttf');
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'ML';
   src: url('../fonts/Montserrat-Light.ttf');
   font-style: normal;
@@ -465,9 +471,10 @@ h4 b {
 
 .navigation-container {
   display: flex;
-  align-items: center;
-  width: 94vw;
-  justify-content: space-between;
+    align-items: center;
+    width: 100vw;
+    justify-content: flex-end;
+    position: relative;
 }
 
 .logo-container {
@@ -476,6 +483,9 @@ h4 b {
   height: 20px;
   display: block;
   margin-right: 300px;
+  margin-left: 20px;
+  position: absolute;
+    left: 0px;
 }
 
 .logo-container-en {
@@ -617,7 +627,7 @@ h4 b {
   margin-top: 50px;
   padding-bottom: 150px;
   overflow: hidden;
-  height: 95vh;
+  height: 100vh;
   /*max-width: 1280px;*/
 }
 
@@ -631,7 +641,7 @@ h4 b {
   font-size: 38px;
   color: #133A87;
   /*font-weight: 900;*/
-  font-family: 'MB';
+  font-family: 'MeB';
 }
 
 .header-title_product {
@@ -1703,6 +1713,8 @@ h2 b {
     font-weight: bold;
     padding: 10px 20px;
     border-radius: 10px;
+    position: absolute;
+    left: 50vw;
   }
 
   .instruction {
