--- a/Tansilotren-BY/css/style.css
+++ b/Tansilotren-BY/css/style.css
@@ -274,7 +274,7 @@ div {
 .header-main-product-img {
   width: 332px;
   height: 284px;
-  background: url('../images/pack_left_tonzilotren_tiny_400x400px 1.svg')
+  background: url('../images/top_pack_left_tonzilotren_BY_332x284px.png')
     no-repeat center / contain;
 }
 
@@ -465,7 +465,7 @@ h2 b {
 .block-interactive-inner__img {
   width: 30%;
   height: 265px;
-  background: url('../images/pack_left_tonzilotren_tiny_400x400px 2.png')
+  background: url('../images/center_pack_left_tonzilotren_BY_265x284px.png')
     no-repeat center / contain;
 }
 
