--- a/Solidagoren/css/style.css
+++ b/Solidagoren/css/style.css
@@ -316,10 +316,9 @@ h4 b {
 
 .story-container {
   width: 100%;
-  overflow: scroll;
   z-index: 2;
   display: flex;
-  overflow-y: hidden;
+  overflow-y: scroll;
     overflow-x: hidden;
   justify-content: flex-end;
 }
