--- a/influcid-RU/css/style.css
+++ b/influcid-RU/css/style.css
@@ -579,6 +579,10 @@ sup {font-size:xx-small; vertical-align:super;}
   background: url("../images/pill8.png") no-repeat center / contain;
 }
 
+.pill2 {
+  background: url("../images/pill2cop.png") no-repeat center / contain;
+}
+
 .pill3 {
   background: url("../images/pill3.png") no-repeat center / contain;
 }
