--- a/Vaksol/css/style.css
+++ b/Vaksol/css/style.css
@@ -785,6 +785,33 @@ h4 b {
 
 
 
+.fixed-link {
+  position: fixed;
+  background: #133A87;
+  color: #fff;
+  bottom: 0;
+  right: 4em;
+  width: 300px;
+  text-align: center;
+  padding: 0.5em 0;
+  -webkit-border-radius: 8px 8px 0 0;
+  border-radius: 8px 8px 0 0;
+  font-weight: 500;
+  z-index: 2000;
+  animation: radial-pulse 1s infinite;
+}
+@keyframes radial-pulse {
+  0% {
+    box-shadow: 0 0 0 0px rgba(0,104,216, 0.5);
+  }
+
+  100% {
+    box-shadow: 0 0 0 10px rgba(0,104,216, 0);
+  }
+}
+
+
+
 .block-interactive {
   margin: auto;
 }
@@ -1595,6 +1622,11 @@ h2 b {
 /*end burger menu*/
 
 @media screen and (max-width: 1024px) {
+
+  .fixed-link {
+    font-size: 10px;
+    width: 250px;
+  }
   .navigation-menu {
     display: none;
   }
