--- a/bioelektra/css/style.css
+++ b/bioelektra/css/style.css
@@ -197,10 +197,10 @@
 }
 
 
-.content-img-str {
-    background: url("../images/for-header-biolectra_fortissium.png")no-repeat center / contain !important;
+/*.content-img-str {
+    background: url("../images/biolectra_orange_st_ua.png")no-repeat center / contain !important;
     margin-left: 5% !important;
-}
+}*/
 
 
 @media screen and (max-width:600px){
