--- a/gastritol-new/css/style.css
+++ b/gastritol-new/css/style.css
@@ -1072,7 +1072,7 @@ div {
   margin-bottom: 5px;
   position: relative;
 
-  background: #E1B400;
+  background: #C90A4C;
   border-radius: 3px;
 
   z-index: 1;
@@ -1264,7 +1264,7 @@ div {
 
   .where-to-buy-mob {
     display: block;
-    background-color: #E1B400 !important;
+    background-color: #C90A4C !important;
     color: white !important;
     font-size: 10px !important;
     line-height: 10px !important;
