--- a/gastritol-new/css/style.css
+++ b/gastritol-new/css/style.css
@@ -369,6 +369,8 @@ div {
   font-family: 'RR';
   width: 190px;
   padding: 20px 0;
+  height: 120px;
+  background: url("../images/border_gastritol.svg") no-repeat center / contain;
 }
 
 .block-2_plate b {
@@ -377,6 +379,8 @@ div {
   text-transform: uppercase;
 
 }
+
+
 
 .block-2_plate:nth-child(odd) {
   margin-right: 20px;
@@ -1072,7 +1076,7 @@ div {
   margin-bottom: 5px;
   position: relative;
 
-  background: #C90A4C;
+  background: white;
   border-radius: 3px;
 
   z-index: 1;
@@ -1166,6 +1170,95 @@ div {
     display: none;
   }
 
+
+  .block-1_container {
+    flex-direction: column;
+    background-size: 70%;
+  }
+
+  .human-1 {
+    width: 100%;
+    height: 415px;
+  }
+
+  .human-3 {
+    height: 420px;
+    width: 100%;
+  }
+
+  .block-2_container {
+    flex-direction: column;
+    background-size: 70%;
+  }
+
+  .block-2_text {
+    width: 100%;
+  }
+
+  .block-2_plate {
+    width: 45%;
+  }
+
+  .block-2_container {
+    background-position: 100% 15%;
+  }
+
+  .block-3_container {
+    flex-direction: column;
+    background-size: 70%;
+  }
+
+  .block-3_text {
+    width: 100%;
+  }
+
+  .block-3_plate {
+    width: 100%;
+  }
+
+  .block-4_container {
+    flex-direction: column;
+    background-size: 70%;
+  }
+  .block-5_container {
+    flex-direction: column;
+    background-size: 70%;
+  }
+
+  .block-5_text-title {
+    font-size: 34px;
+  }
+
+  .block-5_num-container {
+    max-width: 100%;
+  }
+
+  .block-5_num {
+    width: 100%;
+    margin: 10px 0;
+  }
+
+  .block-5_text-title {
+    width: 100%;
+  }
+
+  .header-title_product {
+    width: 100%;
+  }
+
+  .block-5_btn-img {
+    width: 100%;
+  }
+
+  .block-5_btn {
+    max-width: 100%;
+    flex-direction: column-reverse;
+  }
+
+  .map-text {
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
 
 
 
