--- a/gastritol-new/css/style.css
+++ b/gastritol-new/css/style.css
@@ -1268,6 +1268,28 @@ div {
   background: url("../images/fon_photo4.jpg")no-repeat center/contain;
 }
 
+
+.slider-img-1_ru {
+  width: 100%;
+  height: 400px;
+  background: url("../images/phone_main_slider_01_RU_720x800px.jpg")no-repeat center/contain;
+}
+.slider-img-2_ru {
+  width: 100%;
+  height: 400px;
+  background: url("../images/phone_main_slider_02_RU_720x800px.jpg")no-repeat center/contain;
+}
+.slider-img-3_ru {
+  width: 100%;
+  height: 400px;
+  background: url("../images/phone_main_slider_03_RU_720x800px.jpg")no-repeat center/contain;
+}
+.slider-img-4_ru {
+  width: 100%;
+  height: 400px;
+  background: url("../images/phone_main_slider_04_RU_720x800px.jpg")no-repeat center/contain;
+}
+
 .slider__control_left::before {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
 }
@@ -1289,6 +1311,36 @@ div {
 .slider {
   display: none;
 }
+
+
+.header-custom_ru {
+  background: url("../images/pravki_mainOK_Gastritol_International_desctop_RU_1920x1080px.jpg") no-repeat center/cover;
+}
+
+.human-1_ru {
+  background: url("../images/person_hi_09_RU_590x780px.png") no-repeat center/cover;
+}
+
+.human-2_ru {
+  background: url("../images/person_hi_06_RU_590x780px.png") no-repeat center/cover;
+}
+
+.human-3_ru {
+  background: url("../images/person_hi_07_RU_590x780px.png") no-repeat center/cover;
+}
+
+.human-4_ru {
+  background: url("../images/person_hi_08_RU_590x780px.png") no-repeat center/cover;
+}
+
+.human-2_mob-ru {
+  background: url("../images/person_hi_06_RU_590x780px.png") no-repeat center/cover !important;
+}
+
+.human-4_mob-ru {
+  background: url("../images/person_hi_08_RU_590x780px.png") no-repeat center/cover !important;
+}
+
 
 
 @media screen and (max-width: 1024px) {
