--- a/gastritol-new/css/style.css
+++ b/gastritol-new/css/style.css
@@ -308,7 +308,7 @@ div {
   font-size: 18px;
   line-height: 28px;
   color: #0A1318;
-  font-family: 'RL';
+  font-family: 'RR';
   max-width: 380px;
   margin-top: 40px;
   margin-left: 50px;
@@ -365,6 +365,7 @@ div {
 .block-2_plates-container {
   display: flex;
   flex-wrap: wrap;
+  max-width: 500px;
 }
 
 .block-2_plate {
@@ -384,6 +385,10 @@ div {
   font-size: 20px;
   text-transform: uppercase;
 
+}
+
+.block-2_plate p {
+  color: white;
 }
 
 
