--- a/gastritol-new/css/style.css
+++ b/gastritol-new/css/style.css
@@ -455,6 +455,7 @@ div {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  max-width: 650px;
 }
 
 .block-3_plate {
@@ -463,7 +464,7 @@ div {
 }
 
 .block-3_plate p {
-  font-family: 'RL';
+  font-family: 'RR';
   color: black;
   font-size: 14px;
 }
