--- a/gastritol-new/css/style.css
+++ b/gastritol-new/css/style.css
@@ -627,6 +627,7 @@ div {
 
 .block-4_bottom-text p {
   font-size: 16px;
+  font-family: 'RR';
   line-height: 18px;
   color: #FFFFFF;
   margin-top: 80px;
