--- a/gastritol-new/css/style.css
+++ b/gastritol-new/css/style.css
@@ -620,6 +620,7 @@ div {
 }
 .block-4_plate-horisontal p {
   font-size: 16px;
+  font-family: 'RR';
   line-height: 18px;
   text-align: center;
   color: #FFFFFF;
