--- a/Tansilotren-Moldova/css/style.css
+++ b/Tansilotren-Moldova/css/style.css
@@ -159,7 +159,7 @@ div {
   top: 80px;
   left: 20px;
   width: 80px;
-  height: 80px;
+  height: 60px;
   z-index: 15;
   background: url('../images/instruction.svg') no-repeat center / contain;
 }
@@ -170,10 +170,10 @@ div {
 
 .instruction p {
   position: relative;
-  left: -4px;
+  left: 6px;
   top: 75px;
   font-size: 13px;
-  color: black;
+  color: #a00067;
   background-color: transparent;
 }
 
