--- a/Tansilotren-Moldova/css/style.css
+++ b/Tansilotren-Moldova/css/style.css
@@ -102,7 +102,7 @@ div {
 }
 
 .logo-container {
-  background: url('../images/Vector.svg') no-repeat center / contain;
+  background: url('../images/Tonsilotren_LogoRGB_en.svg') no-repeat center / contain;
   width: 140px;
   height: 20px;
   display: block;
