--- a/Tansilotren-KZ/css/style.css
+++ b/Tansilotren-KZ/css/style.css
@@ -249,6 +249,11 @@ div {
   overflow: hidden;
 }
 
+.test-test {
+  position: relative;
+  top: 200px
+}
+
 .header-title {
   margin-left: 6vw;
 }
