--- a/Solidagoren/css/style.css
+++ b/Solidagoren/css/style.css
@@ -843,7 +843,7 @@ h5 b {
   /*color: #A00067;*/
   /*padding: 16px;*/
   /*width: 65%;*/
-  /*border: none;*/
+  border: none;
   /*text-align: left;*/
   outline: none;
   /*font-size: 20px;*/
