--- a/Solidagoren/css/style.css
+++ b/Solidagoren/css/style.css
@@ -336,7 +336,7 @@ h4 b {
   width: 100%;
   z-index: 2;
   display: flex;
-  overflow-y: scroll;
+  /*overflow-y: scroll;*/
     overflow-x: hidden;
   justify-content: flex-end;
 }
