--- a/Solidagoren/css/style.css
+++ b/Solidagoren/css/style.css
@@ -397,7 +397,7 @@ h5 b {
 }
 
 .story-photo-2 {
-  background: url("../images/polaroid_photo_story_2.png") no-repeat center / contain;
+  background: url("../images/polaroid_photo_story_2.jpg") no-repeat center / contain;
 }
 
 .stories-block-2 .story-text_subtext {
