--- a/Tansilotren-Moldova/css/style.css
+++ b/Tansilotren-Moldova/css/style.css
@@ -888,11 +888,11 @@ h2 b {
 
 .disclamer-warning p {
   font-size: 76px;
-  line-height: 70px;
+  line-height: 90px;
   text-align: center;
   color: #8b8b8b;
   margin: 40px 0;
-  font-family: 'HNT';
+  font-family: 'HT';
   font-weight: lighter;
 }
 
