--- a/gastritol-new/css/style.css
+++ b/gastritol-new/css/style.css
@@ -1186,6 +1186,14 @@ div {
   transform: none;
 }
 
+
+/*.active-li {
+  transform: translate(100%, 0);
+}*/
+
+
+
+
 .klein-mob {
   display: none;
 }
