--- a/Solidagoren/css/style.css
+++ b/Solidagoren/css/style.css
@@ -158,6 +158,7 @@ h4 b {
 .header-title .header-title_subtext b {
   color: #E1B400;
   font-size: 18px;
+  text-transform: uppercase;
   font-family: 'RBl', sans-serif;
 }
 
