--- a/Tansilotren-KZ/css/style.css
+++ b/Tansilotren-KZ/css/style.css
@@ -281,7 +281,7 @@ div {
 .header-main-product-img {
   width: 332px;
   height: 284px;
-  background: url('../images/pack_left_tonzilotren_tiny_400x400px 1.svg')
+  background: url('../images/top-pack.png')
     no-repeat center / contain;
 }
 
@@ -472,7 +472,7 @@ h2 b {
 .block-interactive-inner__img {
   width: 30%;
   height: 265px;
-  background: url('../images/pack_left_tonzilotren_tiny_400x400px 2.png')
+  background: url('../images/center-pack.png')
     no-repeat center / contain;
 }
 
@@ -1294,7 +1294,7 @@ h2 b {
     display: block;
     width: 360px;
     height: 300px;
-    background: url('../images/pack_left_tonzilotren_tiny_400x400px 2.png') no-repeat center / contain;
+    background: url('../images/center-pack.png') no-repeat center / contain;
   }
 
   .header-main-img-mobile {
