--- a/Tansilotren-BY/css/style.css
+++ b/Tansilotren-BY/css/style.css
@@ -295,7 +295,7 @@ div {
 .header-main-product-img {
   width: 332px;
   height: 284px;
-  background: url('../images/top_pack_left_tonzilotren_BY_332x284px.png')
+  background: url('../images/top-pack.png')
     no-repeat center / contain;
 }
 
@@ -486,7 +486,7 @@ h2 b {
 .block-interactive-inner__img {
   width: 30%;
   height: 265px;
-  background: url('../images/center_pack_left_tonzilotren_BY_265x284px.png')
+  background: url('../images/center-pack.png')
     no-repeat center / contain;
 }
 
@@ -1223,6 +1223,7 @@ h2 b {
 
   .header-block-2 {
     flex-wrap: wrap;
+    margin-bottom: 50px;
   }
   .block-2__plate {
     margin-bottom: 80px;
@@ -1307,7 +1308,7 @@ h2 b {
     display: block;
     width: 360px;
     height: 300px;
-    background: url('../images/top_pack_left_tonzilotren_BY_332x284px.png') no-repeat center / contain;
+    background: url('../images/center-pack.png') no-repeat center / contain;
   }
 
   .header-main-img-mobile {
